src/objects/Rate_Period__c.object
<CustomObject>
    <fields>
        <fullName>Period_Type__c</fullName>
        <label>Period Type</label>
        <picklist>
            <picklistValues>
                <fullName>Peak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part_Peak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off_Peak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Period__c</fullName>
        <label>Rate Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_1_Rate_kWh__c</fullName>
        <label>Tier 1 Rate ($/kWh)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_2_Rate_kWh__c</fullName>
        <label>Tier 2 Rate ($/kWh)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_3_Rate_kWh__c</fullName>
        <label>Tier 3 Rate ($/kWh)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utility_Company_Rate_Code__c</fullName>
        <formula>Utility_Company__r.Rate_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility Company Rate Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <label>Utility Company</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Utility_Company__c.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Custom</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Utility_Company__c</referenceTo>
        <relationshipLabel>Rate Period</relationshipLabel>
        <relationshipName>Rate_Period</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Rate Period</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rate_Period__c</columns>
        <columns>Period_Type__c</columns>
        <columns>Utility_Company__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rate Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Period</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>